@@ -237,7 +237,7 @@ public class DataSM extends Request implements Demarshaller, Marshaller {
 				inx++;
 			}
 			Tlv opt = new Tlv(tag, oplen, value);
-			optionalsByTag.put(new Short(tag), opt);
+			optionalsByTag.put(Short.valueOf(tag), opt);
 		}
 	}
 
@@ -347,11 +347,11 @@ public class DataSM extends Request implements Demarshaller, Marshaller {
 	}
 
 	public boolean hasOptionnal(short aTag) {
-		return optionalsByTag.containsKey(new Short(aTag));
+		return optionalsByTag.containsKey(Short.valueOf(aTag));
 	}
 
 	public Tlv getOptionnal(short aTag) {
-		return optionalsByTag.get(new Short(aTag));
+		return optionalsByTag.get(Short.valueOf(aTag));
 	}
 
 	public List<Short> getOptionnalTags() {
@@ -429,7 +429,7 @@ public class DataSM extends Request implements Demarshaller, Marshaller {
 	}
 
 	public void setOptionnal(Tlv opt) {
-		optionalsByTag.put(new Short(opt.getTag()), opt);
+		optionalsByTag.put(Short.valueOf(opt.getTag()), opt);
 	}
 
 	public String toString() {
